discussion/kv_engine/176364/176364_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52264: Add BucketQuotaChangeTask to deal with quota changes

The task is created on Bucket creation and snoozed indefinitely.
When a quota change comes in via epctl flush param we wake the task
and have it change the Bucket quota. Currently this change in quota
sets the configuration parameter which updates watermarks and other
related quotas in a configuration listener. This code will be moved
into this task in a future change. In another change we will also
handle decreases in quota in a graceful manner with the goal of
preventing tmp fails as we reduce memory usage.

Change-Id: Ia43dda9fea8eab2547f9fafacf28d911b90c943c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-06-21 17:20:05.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-21 22:11:44.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46950/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [4/93]: test dcp consumer flow control dynamic.....\kv_engine\engines\ep\tests\ep_testsuite_dcp.cc:1537 Test failed: `" (Expected `7000000000", got `2000000000" - Incorrect new size.)
(45 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46950/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18219/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43: error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
                     /*initialSleepTime*/ INT_MAX,
                                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18219/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18219/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39440/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39440/ )

CMake error: CMakeLists.txt:139 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39440/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19295/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [4/93]: test dcp consumer flow control dynamic...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1485 Test failed: `" (Expected `2000000000", got `500000000" - Incorrect new size.)
[2022-06-21T17:37:31.976Z] (207 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19295/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20422/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [5/93]: test dcp consumer flow control aggressive...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1568 Test failed: `" (Expected `1200000000", got `1073741824" - Incorrect new size.)
[2022-06-21T21:05:28.115Z] (423 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20422/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21071/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [2/47]: test max_size - water_mark changes...../kv_engine/engines/ep/tests/ep_testsuite_basic.cc:152 Test failed: `" (Expected `500", got `50" - Incorrect low wat.)
[2022-06-21T21:19:22.078Z] (1238 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21071/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7880/ : FAILURE

Compile error at [2022-06-21T20:47:58.766Z] ../kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7880/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17336/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7983/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28458/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20077/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
